--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
