--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.7.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/parser": "^5.23.0",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
@@ -22,8 +23,10 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.2.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
