--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
       "@pages/*": ["pages/*"],
       "@utils/*": ["utils/*"],
       "@typings/*": ["typings/*"],
-      "@Assets/*" : ["Assets/*"],
+      "@assets/*" : ["assets/*"],
+      "@store/*" : ["store/*"],
+      "@container/*" : ["container/*"],
     }
   }
 }
