--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
